--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 </head>
 
-<body id="page-top" class="index">
+<body id="page-top" class="index" >
 
     <!-- Navigation -->
     <nav id="mainNav" class="navbar navbar-default navbar-custom navbar-fixed-top">
@@ -120,7 +120,7 @@ Mechanic Bulao is highlighting these issues and bringing solutions to these issu
                                     <h4 class="subheading">Needfinding</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">The search for a problem that needed solving.</p>
+                                    <p class="text-muted">The search for a problem that needed solving. To view our pptx <a href="data/Project_Task1 - NeedFinding (slides).pptx"  >click here</a></p>
                                 </div>
                             </div>
                         </li>
@@ -131,10 +131,10 @@ Mechanic Bulao is highlighting these issues and bringing solutions to these issu
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
                                     <h4>2.</h4>
-                                    <h4 class="subheading">Point-of-View and Experience Prototyping</h4>
+                                    <h4 class="subheading">Point-of-View and Experience Prototyping. </h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Refining from problems to solutions.</p>
+                                    <p class="text-muted">Refining from problems to solutions.To view our report <a href="data/Project_Task2 - POV (report).pdf"  >click here </a>and if you want to see our pptx<a href="data/Project_Task2 - POV (slides).pptx"  > click here</a>.</p>
                                 </div>
                             </div>
                         </li>
@@ -148,7 +148,7 @@ Mechanic Bulao is highlighting these issues and bringing solutions to these issu
                                     <h4 class="subheading">Concept Video</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Communicating our value proposition.</p>
+                                    <p class="text-muted">Communicating our value proposition. To view our concept video <a href="https://www.youtube.com/watch?v=tealuCLZZk4&t=61s">click here</a> and view our concept video pptx <a href="data/Project_Task3 - Concept vide(slides).pptx">click here</a></p>
                                 </div>
                             </div>
                         </li>
@@ -162,7 +162,7 @@ Mechanic Bulao is highlighting these issues and bringing solutions to these issu
                                     <h4 class="subheading">Low-fi Prototype</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Our initial dive into what an app might look like.</p>
+                                    <p class="text-muted">Our initial dive into what an app might look like. To view our low-fi Report <a href="data/Project_Task4 - Lo-Fi_Report.pdf">click here</a></p>
                                 </div>
                             </div>
                         </li>
@@ -176,7 +176,7 @@ Mechanic Bulao is highlighting these issues and bringing solutions to these issu
                                     <h4 class="subheading">Medium-fi Prototype</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Putting together 'real' interactions</p>
+                                    <p class="text-muted">Putting together 'real' interactions. To view our medium fi <a href="https://marvelapp.com/5gee2g7/screen/28544233s">click here</a></p>
                                 </div>
                             </div>
                         </li>
@@ -190,7 +190,7 @@ Mechanic Bulao is highlighting these issues and bringing solutions to these issu
                                     <h4 class="subheading">Heuristic Evaluation</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Getting lots of usability feedback.</p>
+                                    <p class="text-muted">Getting lots of usability feedback.To view our Heuristic Evaluation <a href="data/Project_task6 - Heuristic Evaluation.zip">click here</a></p>
                                 </div>
                             </div>
                         </li>
