--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@ Mechanic Bulao is highlighting these issues and bringing solutions to these issu
                     <ul class="list-inline social-buttons">
                         <li><a href="#"><i class="fa fa-twitter"></i></a>
                         </li>
-                        <li><a href="#"><i class="fa fa-facebook"></i></a>
+                        <li><a href="https://www.facebook.com/mechanicbulaopk/"><i class="fa fa-facebook"></i></a>
                         </li>
                         <li><a href="#"><i class="fa fa-linkedin"></i></a>
                         </li>
