--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <!--CSS -->
     <link href="css/agency.min.css" rel="stylesheet">
-
+    <link rel="icon" href="https://scontent-mxp1-1.xx.fbcdn.net/v/t31.0-8/18423197_287143675079678_2333139745760790580_o.png?oh=836f501e47bbef7e48cd45e74406e045&amp;oe=597D4B13" type="image/gif" sizes="16x16">
 
 </head>
 
