--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@ Mechanic Bulao is highlighting these issues and bringing solutions to these issu
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
                                     <h4>7.</h4>
-                                    <h4 class="subheading">Hi-fi Prototype</h4>
+                                    <h4 class="subheading">Hi-fi Prototype. To View our Hi-fi Prototype <a href="https://tayebatariq.github.io/index.html">Click here </a></h4>
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">Our final prototype.</p>
