--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@ Mechanic Bulao is highlighting these issues and bringing solutions to these issu
                                     <h4 class="subheading">Poster and Pitch Slide</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">A visual summary of Bandwagon. To view our poster and pitch.<a href="img/Poster.jpg">Click here  </p>
+                                    <p class="text-muted">A visual summary of Mechanic Bulao. To view our poster and pitch<a href="img/Poster.jpg">Click here  </p>
                                 </div>
                             </div>
                         </li>
